- Update Mongo chart - Bump MongoDB Version due to CVE-2025-14847 Vulnerability

--- a/deployment/helm/mongo/templates/deployment.yaml
+++ b/deployment/helm/mongo/templates/deployment.yaml
@@ -36,6 +36,11 @@ spec:
         - name: mongodb
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          resources:
+            requests:
+              memory: "{{ .Values.memoryRequest }}"
+            limits:
+              memory: "{{ .Values.memoryLimit }}"
           livenessProbe:
             exec:
               command:
